--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,28 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Be Wilder Creative
+email: hello@bewildercreative.co
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://bewildercreative.co" # the base hostname & protocol for your site
+logo: "assets/images/logo.svg"
+instagram_username: bewildercreative
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+collections:
+- services
+- team
+- values
+- bios
+- packages
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
