--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bewildercreative.co" # the base hostname & protocol for your site
 logo: "assets/images/logo.svg"
+favicon: "assets/images/favicon.ico"
 instagram_username: bewildercreative
 
 # Build settings
