--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Be Wilder Creative
 email: hello@bewildercreative.co
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An all-women creative studio delivering beautiful branding and experiences to fit your needs.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bewildercreative.co" # the base hostname & protocol for your site
 logo: "assets/images/logo.svg"
